--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 python_files = test_*
 python_functions = test_*
-python_classes = test_*
+python_classes = Test*
 
 markers=
     yes: for yes tests
